--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en-US">
   <head>
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Cycle Tracker</title>
