added link to cycletracker.json

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Cycle Tracker</title>
     <link rel="stylesheet" href="style.css" />
+	<link rel="manifest" href="cycletracker.json" />
   </head>
   <body>
     <h1>Period tracker</h1>
