--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>Cycle Tracker</title>
     <link rel="stylesheet" href="style.css" />
-	<link rel="manifest" href="cycletracker.json" />
+    <link rel="manifest" href="cycletracker.json" />
+	<link rel="icon" href="icons/circle.svg" />
   </head>
   <body>
     <h1>Period tracker</h1>
