changed favicon to wheel.ico

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Cycle Tracker</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="manifest" href="cycletracker.json" />
-	<link rel="icon" href="icons/circle.svg" />
+	<link rel="icon" href="icons/wheel.ico" />
   </head>
   <body>
     <h1>Period tracker</h1>
