--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
         
     </section>
     <script src="app.js" defer></script>
+	<!-- Register the app's service worker. -->
+    <script>
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("sw.js");
+        }
+    </script>
+	
   </body>
 </html>
