--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" href="icons/circle.ico" />
   </head>
   <body>
-    <h1>Ben's custom PWA</h1>
+    <h1>Ben's custom PWA V1.4</h1>
     <form>
       <fieldset>
         <legend>Enter your period start and end date</legend>
