added vibrate button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button type="submit">Add Period</button>
       </p>
     </form>
+	<button id="vibrate">vibrate</button>
     <section id="past-periods">
         
     </section>
